--- a/visible/pubspec.yaml
+++ b/visible/pubspec.yaml
@@ -38,7 +38,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  camera: ^0.10.5+5
+  image_picker: ^1.0.4
+  flutter_tts: ^3.6.3
+  speech_to_text: ^6.3.0
+  http: ^0.13.5
+  path_provider: ^2.1.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
