--- a/visible/ios/Runner/Info.plist
+++ b/visible/ios/Runner/Info.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>NSCameraUsageDescription</key>
-	<string>이 앱은 시각장애인을 위해 카메라 접근이 필요합니다.</string>
+	<string>이 앱은 카메라 사용을 필요로 합니다</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>이 앱은 음성 인식을 위해 마이크 접근이 필요합니다.</string>
+	<string>이 앱은 마이크 사용을 필요로 합니다</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>이 앱은 음성 인식을 사용합니다</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
