--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r backend/requirements.txt
-    startCommand: uvicorn backend.main:app --host 0.0.0.0 --port 10000
+    startCommand: PYTHONPATH=. uvicorn backend.main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: PORT
         value: 10000
